
2011-02-22  Stefan Galinski  <stefan.galinski@gmail.com>

	* Fixed bug #17483: GifBuilder - meaningfulTempFilePrefix can cause invalid image urls
	* Fixed bug #17531: htmlMail - Can't send mails on port based systems with Swiftmailer substitution
	* Fixed bug #17452: options.hideRecords.pages is ignored in page tree (Thanks to Andreas Kiessling)

2011-02-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17695: htmlArea RTE: Removing format may remove content

2011-02-22  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #17653: t3editor: wrong size calculation in Chrome for the code completion window (Thanks to Stephan Petzl)
	* Fixed bug #17654: t3editor: some code completion descriptions have &quot; entities instead of real quotes (thanks to Christian Kartnig)

2011-02-22  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17518: Content type "mailform" no longer accepts list of addresses for "Recipient List" (also fixed function description in t3lib_mail_SwiftMailerAdapter)

2011-02-22  Steffen Ritter  <info@steffen-ritter.net>

	* Fixed bug #16891: showpic.php causes a fatal error if parameters GET variable is not an array (Thanks to Helmut Hummel)
	* Fixed bug #16902: Fatal error in tslib_content_text (Thanks to Jo Hasenau)

2011-02-22  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17708 wrong link in adminpanel: edit page properties (Thanks to Bjoern Pedersen)
	* Fixed bug #17715: Wrong variable name used in recycler (Thanks to Peter Beernink)
	* Fixed bug 17412: PHP Warning in class.t3lib_matchcondition_abstract.php (Thanks to Sven Jürgens)
	* Fixed bug #17672: CSH - each label fires one request
	* Follow-up to #17383: Open forms cannot be saved after "Relogin" (Security Token errors)
	* Fixed bug #17699: ExtDirect API use relative url for ajax.php

2011-02-22  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.2
	* Fixed bug #17701: Generated t3x might be corrupted

2011-02-21  Steffen Kamper  <steffen@typo3.org>
